# complex_rag

./: .env.unified  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.unified  LICENSE  Makefile  app_fastapi.py  celery_worker.py  deploy-unified.bat  deploy-unified.sh  docker-compose.dev.yml  docker-compose.unified.yml  gunicon.py  pyproject.toml  readme.md  requirements.txt  start_unified_api.py  test_baseline.py  test_unified_api.py
api/: __init__.py  exceptions_simple.py  main.py  middleware_simple.py  unified_main.py
api/dependencies/: __init__.py  common.py
api/exceptions/: __init__.py  error_models.py
api/middleware/: __init__.py  async_optimization.py  caching.py  error_handling.py  load_balancer.py  monitoring.py  performance.py  rate_limiting.py  request_logging.py
api/routers/: __init__.py  analytics.py  chat.py  documents.py  health.py  knowledge.py  legacy_compatibility.py  models.py  system.py  unified_chat.py  unified_embeddings.py  unified_health.py  unified_memory.py  unified_rerank.py  users.py
config/: embedding_providers.json  loguru_config.py  settings.py  settings_simple.py  unified_embedding_config.py  unified_vector_store_config.py
config/environments/: development.py  production.py  testing.py
config/ragflow_configs/: deepdoc_config.py  graphrag_config.py
config/services/: ai_models_config.py  api_config.py  cache_config.py  db_config.py  rag_service_config.py  storage_config.py
core_rag/: __init__.py
core_rag/graph_rag/: __init__.py  config.py  entity_extraction_service.py  example_usage.py  graph_rag_integration.py
core_rag/pipeline/: __init__.py  example_usage.py  factory.py  rag_pipeline.py
core_rag/retriever/: __init__.py  example_usage.py  factory.py  multi_strategy_retriever.py
core_rag/services/: knowledge_service_adapter.py
deployment/nginx/: nginx.conf
deployment/prometheus/: prometheus.yml
deployment/redis/: redis.conf
deployment/scripts/: backup.sh  deploy.sh  monitor.sh
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: unified_embedding_service.md
docs/api/: README.md  Routing_Summary.md  api_documentation.json
docs/architecture/: Quick_Reference.md  RAG_Refactoring_Proposal.md  Technical_Decisions.md
docs/docker-compose/: docker-compose-kibana.yml  docker-compose-milvus.yml
docs/implementation/: Implementation_Guide.md
docs/md/: RAG库的对比.md  libreoffice_install.md  windows_torch_安装.md  安装libreoffice.md  常见问题列表.md
docs/windows_start/: bce_start.bat  frp_start.bat  llm_start.bat  ocr_start.bat  pdf_start.bat  start_all.bat
document_parser/: __init__.py
document_parser/interfaces/: __init__.py  converter_interface.py  parser_interface.py  source_interface.py
document_parser/plugins/: __init__.py  hot_loader.py  plugin_interface.py  plugin_registry.py  plugin_validator.py
document_parser/services/: __init__.py  batch_processor.py  file_source_detector.py  multimodal_fusion.py  parser_service_adapter.py  pipeline_service_adapter.py  processing_pipeline.py  processing_strategy_selector.py  quality_monitor.py  strategy_configurator.py  structure_preservation.py
document_parser/source_handlers/: __init__.py
document_parser/vision/: __init__.py  layout_recognizer.py  ocr.py  recognizer.py  table_structure_recognizer.py
document_parsing/: __init__.py
document_parsing/interfaces/: __init__.py  format_converter_interface.py  parser_interface.py  source_processor_interface.py
document_parsing/pipeline/: __init__.py  batch_processor.py  multimodal_fusion.py  pipeline_config.py  pipeline_monitor.py  pipeline_orchestrator.py  pipeline_scheduler.py  plugin_manager.py  structured_preservation.py
document_parsing/processors/: __init__.py  base_processor.py  code_processor.py  office_processor.py  scanned_processor.py  structured_processor.py  web_processor.py
document_parsing/source_detection/: __init__.py  source_detector.py
document_parsing/strategy_config/: __init__.py  strategy_config.py
document_parsing/strategy_selection/: __init__.py  strategy_selector.py
infrastructure/: __init__.py
infrastructure/cache/: __init__.py
infrastructure/monitoring/: __init__.py  alerting.py  logging_config.py  loguru_logger.py  metrics.py  tracing.py
infrastructure/storage/: __init__.py
openspec/: project.md
quality/: .codespell-words  .flake8  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Makefile  black.toml  pytest.ini
quality/quality_monitoring/: __init__.py  quality_monitor.py
rag_service/: __init__.py  app.py  exceptions.py  middleware_legacy.py  readme.md
rag_service/api/: __init__.py  app.py  dependencies.py  exceptions.py  main.py  middleware.py  pydantic_models.py
rag_service/bce/: README_OpenAI_API.md  requirements.txt  service.py  test_openai_api.py  torch_安装.md
rag_service/core/: rag_engine.py
rag_service/examples/: basic_usage.py
rag_service/interfaces/: __init__.py  base_models.py  embedding_interface.py  entity_retriever_interface.py  keyword_retriever_interface.py  llm_interface.py  rag_interface.py  raptor_retriever_interface.py  rerank_interface.py  vector_retriever_interface.py
rag_service/llm/: requirements.txt  service.py
rag_service/ocr/: requirements.txt  service.py  test_ocr_service.py
rag_service/pdf/: celery_app.py  magic-pdf-server.json  readme.md  requirements.txt  requirements_paddle.txt  requirements_torch.txt  service.py  service_celery.py  torch_paddle_test.py
rag_service/providers/: __init__.py  model_manager_adapter.py
rag_service/qwen3/: API_Documentation.md  download_model.py  readme.md  requirements.txt  service.py  test_api.py  use_demo.py
rag_service/routes/: embeddings.py  health.py  llm.py  memory.py  rerank.py
rag_service/routes_legacy/: __init__.py
scripts/: app_fastapi.py  generate_api_docs.py  gunicon.py  migrate_vector_store.py  setup.py  test_api_routes.py
services/: unified_embedding_service.py
src/celery/: celery_app.py  (+1 more)
tests/: conftest.py  pytest.ini  requirements.txt  run_tests.py  run_tests_simple.py  test_baseline.py  test_common.py  test_refactor_baseline.py  test_unified_embedding.py
(+165 files in other folders)
